--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://mongo:27017/notes
+MONGO_URI=mongodb+srv://oumazizefeveo_db_user:3aPXKa4SqUihbL1l@cluster0.vrz3po4.mongodb.net/notes
 JWT_SECRET=ta_clef_secrete
 JWT_EXPIRES_IN=7d
 UPLOAD_DIR=/usr/src/app/uploads
