mise a jour back url_front

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ JWT_SECRET=ta_clef_secrete
 JWT_EXPIRES_IN=7d
 UPLOAD_DIR=/usr/src/app/uploads
 NODE_ENV=development
+FRONTEND_URL=https://note-app-zq4v.onrender.com
